--- a/package.json
+++ b/package.json
@@ -4,8 +4,13 @@
   "description": "An api that will be able to recieve text and respond with a confidence that the text is fake news. In the future we hope to add insights to the model to allow it to show how it got that answer.",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js"
   },
   "author": "Andrew Farley",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "body-parser": "^1.19.0",
+    "express": "^4.17.1"
+  }
 }
